add gc note